--- a/src/app/modules/main/footer/footer.component.html
+++ b/src/app/modules/main/footer/footer.component.html
@@ -7,7 +7,7 @@
         rel="noopener noreferrer"
         style="margin: 0"
     >
-        erdkse.com</a
+        Anantha Software</a
     >
     <span>.</span>
 </strong>
