--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -9,7 +9,7 @@
         rounded="true"
         style="opacity: 0.8"
     ></pf-image>
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">Anantha</span>
 </a>
 
 <!-- Sidebar -->
@@ -30,7 +30,7 @@
         />
         <div class="info">
             <a [routerLink]="['/profile']" class="d-block">
-                {{ user.profile.email }}
+                {{ user.profile.name }}
             </a>
         </div>
     </div>
