--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,11 @@
 @import '~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css';
 @import '~admin-lte/dist/css/adminlte.min.css';
 
+/* Add application styles & imports to this file! */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~bs-stepper/dist/css/bs-stepper.min.css';
+
+
 @import 'ngx-toastr/toastr';
 
 body {
